--- a/common_parent/su_dao/pom.xml
+++ b/common_parent/su_dao/pom.xml
@@ -32,6 +32,8 @@
         <slf4j-log4j12.version>2.0.0-alpha0</slf4j-log4j12.version>
         <slf4j-api.version>2.0.0-alpha0</slf4j-api.version>
         <mybatis-generator-core.version>1.3.2</mybatis-generator-core.version>
+        <!--pagehelper-->
+        <pagehelper.version>5.1.10</pagehelper.version>
     </properties>
 
     <dependencies>
@@ -40,8 +42,6 @@
             <groupId>com.su</groupId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
-
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>druid</artifactId>
@@ -113,6 +113,12 @@
             <version>${mybatis-generator-core.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
+        </dependency>
+
     </dependencies>
     <build>
         <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
